# DiamondsImagerGenerator

./: .gitignore  Cargo.toml  README.md
res/: palette_DMC.json  pink_8_colors.json
src/: dmc.rs  generator.rs  lib.rs  main.rs  render.rs  types.rs
